5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1859_1285.log
== TEST (2019-06-26 14:05:23) 
-- CODE:
from numpy import*
from numpy.linalg
v = array(eval(input("embalagens:"))
t = array([[4,5,2],[3,2,2],[2,3,3]])

-- ERROR:
File "XXXX", line 2
    from numpy.linalg
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:05:34) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:"))
t = array([[4,5,2],[3,2,2],[2,3,3]])

-- ERROR:
File "XXXX", line 4
    t = array([[4,5,2],[3,2,2],[2,3,3]])
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:05:42) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:"))
t = array([4,5,2],[3,2,2],[2,3,3])

-- ERROR:
File "XXXX", line 4
    t = array([4,5,2],[3,2,2],[2,3,3])
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:06:05) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:"))
t = array[[4,5,2],[3,2,2],[2,3,3]]

-- ERROR:
File "XXXX", line 4
    t = array[[4,5,2],[3,2,2],[2,3,3]]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:06:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:"))
t = array([[4,5,2],[3,2,2],[2,3,3]])

-- ERROR:
File "XXXX", line 4
    t = array([[4,5,2],[3,2,2],[2,3,3]])
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:07:05) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:"))
t = array([[4,5,2],[3,2,2],[2,3,3]])
print(t.T)

-- ERROR:
File "XXXX", line 4
    t = array([[4,5,2],[3,2,2],[2,3,3]])
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:07:23) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:"))
t = array([4,5,2],[3,2,2],[2,3,3])


-- ERROR:
File "XXXX", line 4
    t = array([4,5,2],[3,2,2],[2,3,3])
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:07:37) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:"))
t = array([[4,5,2],[3,2,2],[2,3,3]])


-- ERROR:
File "XXXX", line 4
    t = array([[4,5,2],[3,2,2],[2,3,3]])
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:08:59) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:"))
t = array([4,5,2],[3,2,2],[2,3,3])


-- ERROR:
File "XXXX", line 4
    t = array([4,5,2],[3,2,2],[2,3,3])
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:09:09) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:"))
t = array([4,5,2],[3,2,2],[2,3,3])
print(v)


-- ERROR:
File "XXXX", line 4
    t = array([4,5,2],[3,2,2],[2,3,3])
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:09:16) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:"))
t = array([[4,5,2],[3,2,2],[2,3,3]])
print(v)


-- ERROR:
File "XXXX", line 4
    t = array([[4,5,2],[3,2,2],[2,3,3]])
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:09:32) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:"))
t = array(([4,5,2],[3,2,2],[2,3,3]))
print(v)


-- ERROR:
File "XXXX", line 4
    t = array(([4,5,2],[3,2,2],[2,3,3]))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:10:21) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:"))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
print(v)


-- ERROR:
File "XXXX", line 4
    t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:10:36) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:"))
t = array([4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3])
print(v)


-- ERROR:
File "XXXX", line 4
    t = array([4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3])
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:11:24) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:"))
t = array([4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3])
t = t.T
a = dot(inv(v), t)


-- ERROR:
File "XXXX", line 4
    t = array([4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3])
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:11:57) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:"))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
t = t.T
a = dot(inv(v), t)


-- EXECUTION TIME:
0.703106
-- ERROR:
  File "/home/codebench/codes/1859/1285/main.py", line 4
    t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:11:58) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:"))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
t = t.T
a = dot(inv(v), t)


-- ERROR:
File "XXXX", line 4
    t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:12:27) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
t = t.T
a = dot(inv(v), t)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:12:51) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
t = t.T
a = dot(inv(v), t)
print(a[0])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:13:25) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
b = t.T
a = dot(inv(v), b)
print(a[0])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:14:05) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
b = t.T
a = dot((inv(v), b))
print(a[0])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:14:21) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
b = t.T

print(b)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:16:11) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
b = t.T
a = dot(inv(v),b)
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:17:13) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
b = t.T
a = dot(inv(v) .b)
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:59:07) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
b = t.T
a = dot(inv(v,b))

print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:00:41) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
b = t.T
a = inv(t)
k = dot(a, b)
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:01:16) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
b = t.T
a = inv(v)
k = dot(a, b)
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:01:34) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
b = v.T
a = inv(t)
k = dot(a, b)
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:02:03) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
b = v.T
a = inv(t)
k = dot(a, b)
print(round(a, 0))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:02:14) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
b = v.T
a = inv(t)
k = dot(a, b)
print(round(k, 0))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:02:34) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
b = t.T
a = inv(v)
k = dot(a, b)
print(round(k, 0))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:03:23) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
b = t.T
a = inv(v)
k = dot(b, a)
print(round(k, 0))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:03:34) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
b = t.T
a = v
k = dot(b, a)
print(round(k, 0))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:04:50) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
a = t.T
s = dot(inv(v),a)
print(s)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:05:09) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
a = t.T
s = dot(v,a)
print(s)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:05:38) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
a = t.T
s = dot(inv(v),a)
print(s)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:06:06) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
a = t.T
s = dot(inv(v,a))
print(s)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:06:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
a = t.T
s = doT(inv(v,a))
print(s)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:07:16) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
a = t.T
s = inv(v)
x = dot(s, a)
print(s)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:07:34) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
a = t.T
s = inv(v)
x = dot(a, s)
print(s)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:07:54) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
a = v.T
s = inv(t)
x = dot(a, s)
print(s)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:08:24) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
a = v.T
s = inv(t)
x = dot(a, s)
print(round(s[0],0))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:08:39) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
a = v.T
s = inv(t)
x = dot(a, s)
print(round(s[0], 0))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:08:51) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
a = v.T
s = inv(t)
x = dot(a, s)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:09:09) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
a = v.T
s = inv(t)
x = dot(s, a)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:10:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
a = v.T
s = inv(t)
x = dot(s, a)
print(round(x[0], 0))
print(round(x[1], 1))
print(round(x[2], 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:11:05) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
a = v.T
s = inv(t)
x = dot(s, a)
print(round(x[0], 0))
print(round(x[1], 0))
print(round(x[2], 0))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:12:46) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
a = v.T
s = inv(t)
x = dot(s, a)
print(round(x[0], 0))
print(round(x[1], 0))
print(round(x[2], 0))

if (x[0] == max(x)):
	print("grande")
elif(x[1] == max(x)):
	print("medio")
elif(x[2] == max (x)):
	print("pequeno")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:12:55) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
a = v.T
s = inv(t)
x = dot(s, a)
print(round(x[0], 0))
print(round(x[1], 0))
print(round(x[2], 0))

if (x[0] == max(x)):
	print("grande")
elif(x[1] == max(x)):
	print("medio")
elif(x[2] == max (x)):
	print("pequeno")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 15:13:12) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
a = v.T
s = inv(t)
x = dot(s, a)
print(round(x[0], 0))
print(round(x[1], 0))
print(round(x[2], 0))

if (x[0] == max(x)):
	print("grande")
elif(x[1] == max(x)):
	print("medio")
elif(x[2] == max (x)):
	print("pequeno")

-- EXECUTION TIME:
1.19999
-- TEST CASE 1:
---- input:
[2220,1443,1887]
---- correct output:
grande: 111.0
medio: 222.0
pequeno: 333.0
pequeno
---- user output:
111.0
222.0
333.0
pequeno
-- TEST CASE 2:
---- input:
[1340,840,760]
---- correct output:
grande: 200.0
medio: 100.0
pequeno: 20.0
grande
---- user output:
200.0
100.0
20.0
grande
-- TEST CASE 3:
---- input:
[1632,925,1120]
---- correct output:
grande: 107.0
medio: 200.0
pequeno: 102.0
medio
---- user output:
107.0
200.0
102.0
medio
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:13:22) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
a = v.T
s = inv(t)
x = dot(s, a)
print(round(x[0], 0))
print(round(x[1], 0))
print(round(x[2], 0))

if (x[0] == max(x)):
	print("grande")
elif(x[1] == max(x)):
	print("medio")
elif(x[2] == max (x)):
	print("pequeno")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:13:34) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
a = v.T
s = inv(t)
x = dot(s, a)
print(round(x[0], 0))
print(round(x[1], 0))
print(round(x[2], 0))

if (x[0] == max(x)):
	print("grande")
elif(x[1] == max(x)):
	print("medio")
elif(x[2] == max (x)):
	print("pequeno")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:14:25) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
a = v.T
s = inv(t)
x = dot(s, a)
print("grande",round(x[0], 0))
print("medio",round(x[1], 0))
print("pequeno",round(x[2], 0))

if (x[0] == max(x)):
	print("grande")
elif(x[1] == max(x)):
	print("medio")
elif(x[2] == max (x)):
	print("pequeno")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:14:37) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
a = v.T
s = inv(t)
x = dot(s, a)
print("grande:",round(x[0], 0))
print("medio:",round(x[1], 0))
print("pequeno:",round(x[2], 0))

if (x[0] == max(x)):
	print("grande")
elif(x[1] == max(x)):
	print("medio")
elif(x[2] == max (x)):
	print("pequeno")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 15:14:51) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("embalagens:")))
t = array([[4 ,5 ,2],[3 ,2 ,2],[2 ,3 ,3]])
a = v.T
s = inv(t)
x = dot(s, a)
print("grande:",round(x[0], 0))
print("medio:",round(x[1], 0))
print("pequeno:",round(x[2], 0))

if (x[0] == max(x)):
	print("grande")
elif(x[1] == max(x)):
	print("medio")
elif(x[2] == max (x)):
	print("pequeno")

-- EXECUTION TIME:
1.22238
-- TEST CASE 1:
---- input:
[2220,1443,1887]
---- correct output:
grande: 111.0
medio: 222.0
pequeno: 333.0
pequeno
---- user output:
grande: 111.0
medio: 222.0
pequeno: 333.0
pequeno
-- TEST CASE 2:
---- input:
[1340,840,760]
---- correct output:
grande: 200.0
medio: 100.0
pequeno: 20.0
grande
---- user output:
grande: 200.0
medio: 100.0
pequeno: 20.0
grande
-- TEST CASE 3:
---- input:
[1632,925,1120]
---- correct output:
grande: 107.0
medio: 200.0
pequeno: 102.0
medio
---- user output:
grande: 107.0
medio: 200.0
pequeno: 102.0
medio
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
